build/apps/hello-world/overlays/dev/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world-frontend
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "4"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    external-dns.alpha.kubernetes.io/target: infra.anotherlife.pl
    # external-dns.alpha.kubernetes.io/hostname: infra.anotherlife.pl
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: hello-world-frontend

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hello.infra.anotherlife.pl`) && (PathPrefix(`/`))
      middlewares:
        - name: chain-traefik-dashboard
          namespace: traefik
      services:
        - kind: TraefikService
          name: hello-world-frontend
          port: 80

  tls:
    domains:
      - main: anotherlife.pl
        sans:
          - .anotherlife.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: letsencrypt-infra
    # stores:
    #   default:
    #     defaultCertificate:
    #       secretName: letsencrypt-infra

  #   stores:
  #     default: {}
